--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/styled-components-react-native": "^5.2.5",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
